--- a/package.json
+++ b/package.json
@@ -5,8 +5,8 @@
   "scripts": {},
   "private": true,
   "dependencies": {
-    "@analogjs/content": "^1.0.0-rc.0",
-    "@analogjs/router": "^1.0.0-rc.0",
+    "@analogjs/content": "1.1.2",
+    "@analogjs/router": "1.1.2",
     "@angular/animations": "^17.2.0",
     "@angular/common": "^17.2.0",
     "@angular/compiler": "^17.2.0",
@@ -27,8 +27,8 @@
     "zone.js": "~0.14.0"
   },
   "devDependencies": {
-    "@analogjs/platform": "^1.0.0-rc.0",
-    "@analogjs/vite-plugin-angular": "^1.0.0-rc.0",
+    "@analogjs/platform": "1.1.2",
+    "@analogjs/vite-plugin-angular": "1.1.2",
     "@angular-devkit/build-angular": "^17.2.0",
     "@angular/compiler-cli": "^17.2.0",
     "@nx/angular": "^18.0.0",
@@ -47,3 +47,4 @@
     "vitest": "^1.3.1"
   }
 }
+
