--- a/package.json
+++ b/package.json
@@ -21,8 +21,9 @@
     "marked-gfm-heading-id": "^3.1.0",
     "marked-highlight": "^2.0.1",
     "mermaid": "^10.2.4",
+    "primeng": "^17.12.0",
     "prismjs": "^1.29.0",
-    "rxjs": "~7.5.6",
+    "rxjs": "^7.5.6",
     "tslib": "^2.4.0",
     "zone.js": "~0.14.0"
   },
@@ -47,4 +48,3 @@
     "vitest": "^1.3.1"
   }
 }
-
