--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "@analogjs/vite-plugin-angular": "1.1.2",
     "@angular-devkit/build-angular": "^17.2.0",
     "@angular/compiler-cli": "^17.2.0",
+    "@cloudflare/ai": "^1.1.0",
     "@nx/angular": "^18.0.0",
     "@nx/devkit": "^18.0.0",
     "@nx/eslint": "^18.0.0",
@@ -47,4 +48,3 @@
     "vitest": "^1.3.1"
   }
 }
-
