--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "@angular-devkit/build-angular": "^17.2.0",
     "@angular/compiler-cli": "^17.2.0",
     "@cloudflare/ai": "^1.1.0",
+    "@cloudflare/workers-types": "^4.20240405.0",
     "@nx/angular": "^18.0.0",
     "@nx/devkit": "^18.0.0",
     "@nx/eslint": "^18.0.0",
@@ -45,6 +46,7 @@
     "typescript": "~5.3.0",
     "vite": "^5.0.0",
     "vite-tsconfig-paths": "^4.2.0",
-    "vitest": "^1.3.1"
+    "vitest": "^1.3.1",
+    "wrangler": "^3.48.0"
   }
 }
