--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "jsdom": "^22.1.0",
     "nx": "18.2.2",
     "postcss": "^8.4.5",
+    "prettier": "^3.2.5",
     "tailwindcss": "^3.0.2",
     "typescript": "~5.3.0",
     "vite": "^5.0.0",
@@ -47,4 +48,3 @@
     "vitest": "^1.3.1"
   }
 }
-
