--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -14,6 +14,9 @@
       "es2020",
       "dom"
     ],
+    "types": [
+			"@cloudflare/workers-types"
+		],
     "skipLibCheck": true,
     "skipDefaultLibCheck": true,
     "baseUrl": ".",
