--- a/wrangler.toml
+++ b/wrangler.toml
@@ -1,5 +1,6 @@
-name = "cloudflare-challange"
+name = "cloudflare-challenge"
 compatibility_date = "2024-04-13"
+compatibility_flags = ["nodejs_compat"]
 
 [ai]
 binding = "AI"
