--- a/package.json
+++ b/package.json
@@ -5,8 +5,8 @@
   "scripts": {},
   "private": true,
   "dependencies": {
-    "@analogjs/content": "1.1.2",
-    "@analogjs/router": "1.1.2",
+    "@analogjs/content": "1.2.0",
+    "@analogjs/router": "1.2.0",
     "@angular/animations": "^17.2.0",
     "@angular/common": "^17.2.0",
     "@angular/compiler": "^17.2.0",
@@ -27,10 +27,11 @@
     "zone.js": "~0.14.0"
   },
   "devDependencies": {
-    "@analogjs/platform": "1.1.2",
-    "@analogjs/vite-plugin-angular": "1.1.2",
+    "@analogjs/platform": "1.2.0",
+    "@analogjs/vite-plugin-angular": "1.2.0",
     "@angular-devkit/build-angular": "^17.2.0",
     "@angular/compiler-cli": "^17.2.0",
+    "@cloudflare/workers-types": "^4.20240405.0",
     "@nx/angular": "^18.0.0",
     "@nx/devkit": "^18.0.0",
     "@nx/eslint": "^18.0.0",
@@ -45,6 +46,7 @@
     "typescript": "~5.3.0",
     "vite": "^5.0.0",
     "vite-tsconfig-paths": "^4.2.0",
-    "vitest": "^1.3.1"
+    "vitest": "^1.3.1",
+    "wrangler": "^3.48.0"
   }
 }
