--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -10,20 +10,12 @@
     "importHelpers": true,
     "target": "es2015",
     "module": "esnext",
-    "lib": [
-      "es2020",
-      "dom"
-    ],
-    "types": [
-			"@cloudflare/workers-types"
-		],
+    "lib": ["es2020", "dom"],
+    "types": ["@cloudflare/workers-types"],
     "skipLibCheck": true,
     "skipDefaultLibCheck": true,
     "baseUrl": ".",
     "paths": {}
   },
-  "exclude": [
-    "node_modules",
-    "tmp"
-  ]
+  "exclude": ["node_modules", "tmp"]
 }
